--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --primary-color: #ff1744;
+  --primary-color: #F9A8D4;
   --secondary-color: #93A3B8;
   --text-color: #f4f4f4;
   --background-color: #0F172A;
@@ -10,14 +10,13 @@
   --error-color: #ffab91;
   --warning-background-color: #ff6f00;
   --warning-color: #ffe082;
-  --info-color: #96f5f7;
+  --info-color: #DB2777;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-align: center;
 }
 
 body {
@@ -27,9 +26,11 @@ body {
 }
 
 .main-container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  padding: 2rem;
 
 }
 
@@ -43,25 +44,52 @@ body {
 
 
 
-
-
 h1 {
   font-weight: 500;
   font-size: 3rem;
-  color: #F9A8D4;
+  color: var(--primary-color)
 }
 
 a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2rem;
   color: var(--secondary-color);
   text-decoration: none;
+
+}
+
+span {
+  font-weight: 700;
+  font-size: 30px;
+  padding-right: 20px;
+}
+
+
+.link {
+  color: var(--secondary-color);
+  font-size: 1rem;
+  margin-top: 2rem;
+  display: inline-block;
+
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .channel-info {
   display: flex;
   align-items: center;
+  justify-content: center;
+  max-width: 800px;
   gap: 2rem;
-  margin: 3rem 3rem 0;
+  margin: auto;
+  padding: 2rem;
 }
+
+
 
 .channel-icon {
   width: 5rem;
@@ -96,13 +124,9 @@ li:last-child {
   border-bottom: none;
 }
 
-li img {
-  object-fit: cover;
-}
-
 li h3 {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 100;
   color: #F1F6FA;
 }
 
@@ -113,62 +137,51 @@ li p {
 
 input {
   padding: 0.5rem;
+  margin: 1rem 0.5rem;
   border-radius: 5px;
-  border: 1px solid #7e8b9d;
+  border: 1px solid #65748A;
   background-color: #1E293B;
   font-size: 0.7rem;
   text-align: left;
   height: 1.5rem;
   width: 100%;
-
-}
-
-.link {
-  color: var(--secondary-color);
-  font-size: 1rem;
-  margin-top: 2rem;
-  display: inline-block;
-}
-
-.link:hover {
-  text-decoration: underline;
+  color: var(--text-color);
 }
 
 
-
-
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1.25rem;
-}
-
-.card {
-  background: var(--card-background-color);
-  padding: 0.4rem;
-  transition: transform 0.2s;
-  border-radius: 10px;
+.card-body {
+  justify-content: center;
+  max-width: 800px;
+  margin: auto;
+  padding: 2rem;
 }
 
 .card img {
-  width: 100%;
-  border-radius: 10px;
+  width: 95px;
+  height: 95px;
 }
 
-.card-body {
-  padding: 2rem;
-  text-align: left;
-  width: 100%;
-  max-width: 100%;
+.card-details {
+  display: flex;
+  flex-direction: column;
 }
 
+.card-details h3 {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: var(--text-color);
+}
 
+.card-details p {
+  font-size: 0.7rem;
+  color: var(--secondary-color);
+}
 
-
-
-
-
+audio {
+  width: 300px;
+  margin-top: 1rem;
+  padding: 0.5rem;
+}
 
 .btn-start {
   background: linear-gradient(45deg, #C62680, #c12fba, #3f043c);
